# curve-fit-demo

./: notebook_curve_fit.ipynb  pyproject.toml
